# vulnerable-llm-agent

./: .env  .gitignore  DESIGN.md  README.md  README.ru.md  config.yaml  debug.py  main.py  pyproject.toml  tools.allow
core/: agent.py  guardrails.py  llm.py  prompt.py  session.py  tracer.py
data/: users.db
lang/: en.yaml  ru.yaml
logs/: trace.jsonl
scripts/: init_db.py
sessions/user1/: history.jsonl  meta.json
skills/: default.md
skills/en/: user_profile.md
skills/ru/: user_profile.md
tools/: db_query.py  file_ops.py  memory.py  registry.py  send_message.py  shell.py  skills.py
